kubernetes/main/apps/security/lldap/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: lldap
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lldap
  ingress:
    # allow redis connection
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authelia
      toPorts:
        - ports:
            - port: "389"
  egress:
    - {}

    # # allow redis connection
    # - toEndpoints:
    #     - matchLabels:
    #         app.kubernetes.io/name: authelia-redis
    #   toPorts:
    #     - ports:
    #         - port: "6379"
    # # allow lldap connection
    # - toEndpoints:
    #     - matchLabels:
    #         app.kubernetes.io/name: lldap
    #   toPorts:
    #     - ports:
    #         - port: "389"
